# vision-neuroscience-cource

./: .gitignore  CITATION.cff  README.md
lectures/computational_methods/: brain_signal_processing.py  haxby_fMRI_classification.py  mne-python.py  perg_classification.py
lectures/computational_methods/presentation/: computational_methods_in_neurovision_slides.tex
lectures/computational_methods/presentation/figures/: rational_agents.xcf
lectures/massive_datasets/: check_nsd_storage.py  fl_skeleton.py  main.py  mimic_iv_demo.py  nih_cxr_cnn.py  nsd_embedding_umap.py  pyproject.toml  things_download.py
lectures/massive_datasets/presentation/images/: minnie_glow_rotate2-desktop_1-na-1920x1080.webm
