[project]
name = "massive-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.55",
    "h5py>=3.15.1",
    "nibabel>=5.3.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "tensorflow>=2.20.0",
    "torch>=2.9.0",
]
